syntax = "proto3";

option csharp_namespace = "grpcProtoFiles";

import "Protos/team.proto";

package tournament;

service TournamentService {
  rpc CreateTournament (CreateTournamentRequest) returns (CreateTournamentResponse);
}

message CreateTournamentRequest {
  Tournament tournament = 1;
}

message CreateTournamentResponse {
  Tournament tournament = 1;
}

message Tournament {
  string Name = 1;
  string Description = 2;
  repeated team.Team teams = 3;
}
